Dockerize app + influxdb + grafana